refact(GeoJsonDataset): add of(Path) factory, move file reading out of MapyrusInterpreter